# p-engine-2D

./: CMakeLists.txt
src/: main.cpp
src/logic/: AppLoop.cpp  AppLoop.h  Collider.cpp  Collider.h  Drawer.cpp  Drawer.h  Engine.cpp  Engine.h
src/models/: CollitionProps.h  Vect2.cpp  Vect2.h
src/models/bodies/: Bodie.cpp  Bodie.h  Sphere.cpp  Sphere.h
src/utils/: enums.h  pmath.cpp  pmath.h  prand.cpp  prand.h
